# ciaf-watermarking

./: .bandit  .flake8  .gitignore  BANDIT_FIXES.md  BANDIT_REPORT.md  CIAF_EXECUTIVE_SUMMARY.md  CIAF_MATHEMATICAL_FRAMEWORK.md  CIAF_TECHNICAL_WHITEPAPER.md  FORENSIC_FINGERPRINTING.md  GITHUB_ACTIONS_COMPLETE.md  INTEGRATION_FIXES_V1.5.0.md  INTEGRATION_FIXES_V1.5.0_FINAL.md  INTEGRATION_SUMMARY_V1.5.0.md  MANIFEST.in  PACKAGE_SUMMARY.md  PACKAGING.md  PYTHON_QUALITY_REPORT.md  QUICK_REFERENCE.md  README.md  SCHEMA.md  SCHEMA_QUICK_REF.md  SCHEMA_REVIEW_SUMMARY.md  __init__.py  advanced_features.py  async_processing.py  fix_lint.py  fragment_selection.py  fragment_verification.py  hashing.py  models.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  unified_interface.py  verify_install.py
.github/: ACTIONS_SUMMARY.md  PYPI_SETUP.md  README.md  RELEASE_COMMANDS.md  WORKFLOW_DIAGRAM.md  dependabot.yml
.github/workflows/: publish.yml  release-candidate.yml  test.yml
audio/: __init__.py  core.py  metadata.py  spectral.py  verification.py
binary/: __init__.py  core.py  verification.py
examples/: .gitignore  OUTPUT_STRUCTURE.md  distinctive_anchor_integration.py
examples/anthropic/: 01_basic_text_watermarking.py  02_chat_conversation.py  03_watermark_styles.py  04_fastapi_api.py  QUICK_START.md  README.md  config.py  requirements.txt
examples/gemini/: FLOW_DIAGRAMS.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INTEGRATION_CHECKLIST.md  ONE_PAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  config_template.py  requirements.txt
examples/gemini/implementation/: .env.example  01_basic_text_watermarking.py  02_chat_conversation.py  03_streaming_response.py  04_batch_processing.py  05_verification.py  06_image_watermarking.py  07_video_watermarking.py  08_audio_watermarking.py  INDEX.md  README.md  quickstart.sh  requirements.txt
examples/openai/: 01_basic_text_watermarking.py  02_chat_conversation.py  03_watermark_styles.py  04_fastapi_api.py  QUICK_START.md  README.md  config.py  requirements.txt
gpu/: batch_processing.py  perceptual_hashing.py
images/: visual.py
pdf/: metadata.py
src/ciaf_watermarks/: __init__.py  advanced_features.py  async_processing.py  context.py  fragment_selection.py  fragment_verification.py  hashing.py  hierarchical_verification.py  models.py  schema_validation.py  signature_envelope.py  unified_interface.py  vault_adapter.py
src/ciaf_watermarks/audio/: core.py  metadata.py  spectral.py  verification.py
src/ciaf_watermarks/binary/: core.py  metadata.py  verification.py
src/ciaf_watermarks/forensics/: __init__.py  text.py
src/ciaf_watermarks/gpu/: __init__.py  batch_processing.py  fragment_selection.py  perceptual_hashing.py
src/ciaf_watermarks/images/: fingerprints.py  steganography.py  visual.py
src/ciaf_watermarks/pdf/: metadata.py  visual.py
src/ciaf_watermarks/text/: core.py  verification.py  watermark.py
src/ciaf_watermarks/video/: core.py  metadata.py  verification.py  visual.py
test_watermarks/: .coverage  TEST_README.md  conftest.py  run_test.py  test_advanced_features.py  test_async_processing.py  test_fragment_selection.py  test_fragment_verification.py  test_hashing.py  test_hierarchical_verification.py  test_models.py  test_signature_envelope.py  test_unified_interface.py  test_vault_adapter.py
test_watermarks/test_audio/: test_core.py  test_metadata.py  test_spectral.py  test_verification.py
test_watermarks/test_binary/: test_core.py  test_metadata.py  test_verification.py
test_watermarks/test_gpu/: test_perceptual_hashing.py
test_watermarks/test_images/: test_fingerprints.py  test_qr.py  test_steganography.py  test_visual.py
test_watermarks/test_pdf/: test_metadata.py
test_watermarks/test_text/: test_core.py  test_verification.py  test_watermark.py
test_watermarks/test_video/: test_core.py  test_metadata.py  test_verification.py  test_visual.py
text/: __init__.py  core.py
video/: __init__.py  core.py  visual.py
